src/test/deca/context/invalid/provided/condition_if4.deca
/*/ Description:
//    Programme utilisant une condition if de façon incorrecte.
//
// Resultats: Ligne 11 Erreur contextuelle
//
// Historique:
//    cree le 01/01/2022*/

{
	int j = 5;
        if(j = j + 1){
        	println(j);
        }
}
